# resource_manager

./: Cargo.toml  resources.json  result.txt
resources/: resources.json
resources/text/: error-text.txt
src/: main.rs  resource.rs  resource_manager.rs  resource_system.rs
