[package]
name = "resource-manager"
version = "0.1.0"
authors = ["Aoife <aoifeebradley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
anyhow = "1.0.40"
state = "0.4.2"
enum_dispatch = "0.3.7"
notify = "4.0.17"
downcast-rs = "1.2.0"
serde = {version = "1.0.126", features = ["std"]}
serde_json = "1.0.59"
env_logger = "0.8.4"
log = "0.4.14"